<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/menu_home"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/myprofile"
            android:icon="@drawable/ic_account_box_24dp">
            <menu>
                <item
                    android:id="@+id/nav_my_account"
                    android:title="@string/myAccount" />
                <item
                    android:id="@+id/nav_my_order"
                    android:title="@string/myOrder" />
                <item
                    android:id="@+id/nav_address"
                    android:title="@string/myAddress" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/company">
            <menu>
                <item android:id="@+id/nav_about_us"
                    android:title="@string/aboutUs" />

                <item android:id="@+id/nav_contact_us"
                    android:title="@string/contactus" />

                <item android:id="@+id/nav_privacy_policy"
                    android:title="@string/privacyPolicy" />

                <item android:id="@+id/nav_terms_conditions"
                    android:title="@string/termCondition" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="Offers">
            <menu>
                <item
                    android:id="@+id/nav_offer"
                            android:icon="@drawable/ic_local_offer_24dp"
                    android:title="@string/offer" />
            </menu>
        </item>

    </group>
    <group android:checkableBehavior="single">
        <item android:title="Authority">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_vpn_key_24dp"
                    android:title="@string/login" />
            </menu>
        </item>
    </group>
</menu>