<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".LoginActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/image"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/email"
          app:hintTextColor="@color/black"
          app:boxStrokeColor="@color/black"
          app:boxStrokeWidthFocused="2dp"
          app:startIconDrawable="@drawable/email"
          app:startIconTint="@color/black"
          app:endIconMode="clear_text"
          app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            android:textColor="@color/black" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/enter_password"
          app:hintTextColor="@color/black"
          app:boxStrokeColor="@color/black"
          app:boxStrokeWidthFocused="2dp"
          app:startIconDrawable="@drawable/pass"
          app:startIconTint="@color/black"
          app:endIconMode="password_toggle"
          app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/Login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:layout_below="@id/relativeLayout"
          android:layout_marginTop="20dp"
          android:backgroundTint="@color/colorPrimaryDark"
          android:textColor="@color/white"
          android:fontFamily="@font/poppins"
          android:layout_gravity="center"
          android:textAllCaps="false"/>

      <Button
          android:id="@+id/loginviagoogle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/loginviagoogle"
          android:layout_below="@id/relativeLayout"
          android:backgroundTint="@color/colorPrimaryDark"
          android:drawableStart="@drawable/google"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/poppins"
          android:textColor="@color/colorWhite"
          android:layout_gravity="center"
          android:textAlignment="center"
          android:textAllCaps="false"
          android:textColorHint="#fff"/>

      <Button
          android:id="@+id/loginviafacebook"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/loginviafacebook"
          android:layout_below="@id/relativeLayout"
          android:backgroundTint="@color/colorPrimaryDark"
          android:drawableStart="@drawable/facebook"
          android:layout_marginTop="8dp"
          android:fontFamily="@font/poppins"
          android:textColor="@color/colorWhite"
          android:layout_gravity="center"
          android:textAlignment="center"
          android:textAllCaps="false"
          android:textColorHint="#fff"/>



      <RelativeLayout
          android:id="@+id/relativeLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">


        <TextView
            android:id="@+id/newuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="New user?"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Sign Up"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="191dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newuser"
            android:layout_marginLeft="118dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="@font/poppins"
            android:minHeight="48dp"
            android:onClick="callForgetPassword"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/black" />


      </RelativeLayout>
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>